arquivos para testar

--- a/views/index.html
+++ b/views/index.html
@@ -1,1 +1,34 @@
-hello raw
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="http://localhost:8123/erlang-the-movie.png">
+    <title>Erlang - RawHttp</title>
+  </head>
+  <style>
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        margin: 0;
+        text-align: center;
+    }
+
+    div a {
+        display: block;
+        margin: 5px 0;
+    }
+  </style>
+  <body>
+    <p>Hello Mike?</p>
+    <img src="http://localhost:8123/erlang-the-movie.png" alt="erlang-the-movie.png" />
+
+    <div>
+      <a href="http://localhost:8123/index.html">index.html</a>
+      <a href="http://localhost:8123/ske.jpg">ske.jpg</a>
+      <a href="http://localhost:8123/kamek_wp.png">kamek_wp.png</a>
+    </div>
+  </body>
+</html>
