--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
     }
   </style>
   <body>
-    <p>Hello Mike?</p>
+    <p>Hello, Mike?</p>
     <img src="http://localhost:8123/erlang-the-movie.png" alt="erlang-the-movie.png" />
 
     <div>
